[gd_scene load_steps=16 format=2]

[ext_resource path="res://menu/start_menu/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://levels/Level01.tscn" type="PackedScene" id=2]
[ext_resource path="res://menu/config_controls_menu/ControlConfigMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu/credits/Credits.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/start_menu/StartMenu.tres" type="ButtonGroup" id=5]
[ext_resource path="res://assets/Fonts/codeman38_press-start-2p/PressStart2P.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[sub_resource type="InputEventAction" id=6]
action = "ui_pause"
pressed = true

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[node name="StartMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
next_scene = ExtResource( 2 )
controls = ExtResource( 3 )
credits = ExtResource( 4 )
button_group = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 768.0

[node name="CenterContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 260.0
margin_top = 286.0
margin_right = 764.0
margin_bottom = 482.0
alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="CenterContainer/CenterContainer"]
margin_right = 504.0
margin_bottom = 196.0
custom_constants/separation = 32
alignment = 1

[node name="VBoxContainer2" type="HBoxContainer" parent="CenterContainer/CenterContainer/VBoxContainer3"]
margin_right = 504.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="CenterContainer/CenterContainer/VBoxContainer3/VBoxContainer2"]
margin_top = 8.0
margin_right = 288.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "Charge"

[node name="TextureRect" type="TextureRect" parent="CenterContainer/CenterContainer/VBoxContainer3/VBoxContainer2"]
margin_left = 292.0
margin_right = 356.0
margin_bottom = 64.0
texture = ExtResource( 7 )

[node name="Label2" type="Label" parent="CenterContainer/CenterContainer/VBoxContainer3/VBoxContainer2"]
margin_left = 360.0
margin_top = 8.0
margin_right = 504.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 8 )
text = "Kid"

[node name="VBoxContainer3" type="VBoxContainer" parent="CenterContainer/CenterContainer/VBoxContainer3"]
margin_top = 96.0
margin_right = 504.0
margin_bottom = 196.0
alignment = 1

[node name="StartGame" type="Button" parent="CenterContainer/CenterContainer/VBoxContainer3/VBoxContainer3"]
margin_right = 504.0
margin_bottom = 22.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Controls")
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
group = ExtResource( 5 )
text = "Start Game"
flat = true

[node name="Controls" type="Button" parent="CenterContainer/CenterContainer/VBoxContainer3/VBoxContainer3"]
margin_top = 26.0
margin_right = 504.0
margin_bottom = 48.0
focus_neighbour_top = NodePath("../StartGame")
focus_neighbour_bottom = NodePath("../Credits")
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
group = ExtResource( 5 )
text = "Controls"
flat = true

[node name="Credits" type="Button" parent="CenterContainer/CenterContainer/VBoxContainer3/VBoxContainer3"]
margin_top = 52.0
margin_right = 504.0
margin_bottom = 74.0
focus_neighbour_top = NodePath("../Controls")
focus_neighbour_bottom = NodePath("../Quit")
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
group = ExtResource( 5 )
text = "Credits"
flat = true

[node name="Quit" type="Button" parent="CenterContainer/CenterContainer/VBoxContainer3/VBoxContainer3"]
margin_top = 78.0
margin_right = 504.0
margin_bottom = 100.0
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../StartGame")
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
shortcut = SubResource( 7 )
group = ExtResource( 5 )
text = "Quit"
flat = true
[connection signal="pressed" from="CenterContainer/CenterContainer/VBoxContainer3/VBoxContainer3/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="CenterContainer/CenterContainer/VBoxContainer3/VBoxContainer3/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="CenterContainer/CenterContainer/VBoxContainer3/VBoxContainer3/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CenterContainer/CenterContainer/VBoxContainer3/VBoxContainer3/Quit" to="." method="_on_Quit_pressed"]
